[package]
name = "whiplash"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-std = "1.12.0"
chrono = "0.4.38"
circular-buffer = "0.1.7"
env_logger = "0.11.5"
futures = "0.3.30"
futures-util = "0.3.30"
log = "0.4.22"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
serde_yaml = "0.9.34"
tokio = { version = "1.39.2", features = ["full"] }
tokio-native-tls = "0.3.1"
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"]}
url = "2.5.2"
